--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="flex justify-center">
   <div
-    class="flex h-[100dvh] w-full flex-col items-center justify-center bg-[url('/placeholder.svg?height=1080&amp;width=1920')] bg-cover bg-center bg-black">
+    class="flex h-[100dvh] w-full flex-col items-center justify-center bg-cover bg-center bg-gradient-to-br from-slate-900 to-pink-900">
     <header
       class="flex flex-col items-center justify-center space-y-4 px-6 py-12 text-center text-white backdrop-blur-sm">
       <h1 class="text-5xl font-bold sm:text-6xl md:text-7xl lg:text-8xl font-sans uppercase tracking-wide">
