--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <h1 class="text-5xl font-bold sm:text-6xl md:text-7xl lg:text-8xl font-sans uppercase tracking-wide">
         Your photos suck.
       </h1>
-      <p class="text-lg font-medium sm:text-xl md:text-2xl lg:text-3xl font-sans font-bold tracking-wide">
-        Unsnap. Get feedback. Get better.
+      <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-sans font-bold tracking-wide">
+        Unsnap. Get mentor. Get better.
       </p>
     </header>
   </div>
