--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <title>Unsnapp</title>
 </head>
 
-<body class="flex justify-center">
+<body class="flex justify-center font-nunito">
   <div
     class="flex h-[100dvh] w-full flex-col items-center justify-center bg-cover bg-center bg-gradient-to-br from-slate-900 to-pink-900">
     <header
       class="flex flex-col items-center justify-center space-y-4 px-6 py-12 text-center text-white backdrop-blur-sm">
-      <h1 class="text-5xl font-bold sm:text-6xl md:text-7xl lg:text-8xl font-sans uppercase tracking-wide ">
-        You take snapshots.
+      <h1 class="text-5xl font-extralight sm:text-6xl md:text-7xl lg:text-8xl font-nunito uppercase tracking-wide">
+        You take photos.
       </h1>
-      <p class="text-5xl text-transparent font-bold sm:text-6xl md:text-7xl lg:text-8xl font-sans uppercase tracking-wide py-12 bg-gradient-to-br to-slate-900 from-pink-900 bg-clip-text ">
+      <p class="text-5xl text-transparent font-bold sm:text-6xl md:text-7xl lg:text-8xl font-nunito uppercase tracking-wide py-12 bg-gradient-to-tl from-slate-900 to-sky-400 bg-clip-text">
         They suck.
       </p>
-      <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-sans font-bold tracking-wide">
-        Get true feedback. Get better. Unsnap. 
+      <p class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-nunito font-extralight tracking-wide">
+        Get true feedback. Get better. Unsnapp. 
       </p>
     </header>
   </div>
